# dl_scratch3

./: .gitignore  README.md  pyproject.toml
chapter1/: chapter1.md  chapter1.py
chapter2/: chapter2.md  step11.py
dezero/: __init__.py  core.py
